updated about.md, publication, and blog post

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,8 @@
     "    # },\n",
     "    \"journal\":{\n",
     "        # \"file\": \"MyPublications_20240306.bib\",\n",
-    "        \"file\": \"MyPublications_20250815.bib\",\n",
+    "        # \"file\": \"MyPublications_20250815.bib\",\n",
+    "        \"file\": \"MyPublications_20260210.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -89,22 +90,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SUCESSFULLY PARSED Mukasa2021: \" High-pressure phase diagrams of {FeSe1}−{xTex}: correlation  ... \"\n",
-      "SUCESSFULLY PARSED Onishi2021: \" Theory of {Seebeck} ratchet in a noncentrosymmetric electron ... \"\n",
-      "SUCESSFULLY PARSED gao_quantum_2023: \" Quantum metric nonlinear {Hall} effect in a topological anti ... \"\n",
-      "SUCESSFULLY PARSED onishi_theory_2022: \" Theory of shift heat current and its application to electron ... \"\n",
-      "SUCESSFULLY PARSED onishi_effects_2022: \" Effects of relaxation on the photovoltaic effect and possibi ... \"\n",
-      "SUCESSFULLY PARSED ishida_pure_2022: \" Pure nematic quantum critical point accompanied by a superco ... \"\n",
-      "SUCESSFULLY PARSED onishi_fundamental_2024: \" Fundamental {Bound} on {Topological} {Gap}  \"\n",
-      "SUCESSFULLY PARSED onishi_high-efficiency_2024: \" High-efficiency energy harvesting based on a nonlinear {Hall ... \"\n",
-      "SUCESSFULLY PARSED gao_antiferromagnetic_2024: \" An antiferromagnetic diode effect in even-layered {MnBi2Te4}  \"\n",
-      "SUCESSFULLY PARSED min_colossal_2024: \" Colossal room-temperature non-reciprocal {Hall} effect  \"\n",
-      "SUCESSFULLY PARSED onishi_topological_2024: \" Topological {Bound} on the {Structure} {Factor}  \"\n",
-      "SUCESSFULLY PARSED onishi_universal_2024: \" Universal relation between energy gap and dielectric constan ... \"\n",
-      "SUCESSFULLY PARSED ghosh_probing_2024: \" Probing quantum geometry through optical conductivity and ma ... \"\n",
-      "SUCESSFULLY PARSED onishi_theory_2025: \" Theory of {Thermopolarization} {Effect}  \"\n",
-      "SUCESSFULLY PARSED onishi_quantum_2025: \" Quantum weight: {A} fundamental property of quantum many-bod ... \"\n",
-      "SUCESSFULLY PARSED onishi_geometric_2025: \" Geometric bound on the structure factor and a harmonic condi ... \"\n"
+      "WARNING Missing Expected Field 'year' from entry chouGiantNonlinearTransport2025: \" Giant Nonlinear Transport Resp ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry gaoAntiferromagneticDiodeEffect2024: \" An Antiferromagnetic Diode Eff ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry gaoQuantumMetricNonlinear2023: \" Quantum Metric Nonlinear {{Hal ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry ghoshProbingQuantumGeometry2024a: \" Probing Quantum Geometry throu ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry ishidaPureNematicQuantum2022: \" Pure Nematic Quantum Critical  ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry minColossalRoomtemperatureNonreciprocal2024: \" Colossal Room-Temperature Non- ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry Mukasa2021: \" High-Pressure Phase Diagrams o ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry Onishi2021: \" Theory of {{Seebeck}} Ratchet  ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiEffectsRelaxationPhotovoltaic2022: \" Effects of Relaxation on the P ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiEmergentCurvedSpace2026: \" Emergent Curved Space and Grav ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiFundamentalBoundTopological2024: \" Fundamental {{Bound}} on {{Top ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiGeometricBoundStructure2025: \" Geometric Bound on the Structu ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiHighefficiencyEnergyHarvesting2024: \" High-Efficiency Energy Harvest ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiQuantumWeightFundamental2025: \" Quantum Weight: {{A}} Fundamen ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiTheoryShiftHeat2022: \" Theory of Shift Heat Current a ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiTheoryThermopolarizationEffect2025: \" Theory of {{Thermopolarization ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiTopologicalBoundStructure2024: \" Topological {{Bound}} on the { ... \"\n",
+      "WARNING Missing Expected Field 'year' from entry onishiUniversalRelationEnergy2024a: \" Universal Relation between Ene ... \"\n"
      ]
     }
    ],
