--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -319,7 +319,11 @@
       "2024-09-01-An-antiferromagnetic-diode-effect-in-even-layered-MnBi2Te4.md\n",
       "2024-10-01-Colossal-room-temperature-non-reciprocal-Hall-effect.md\n",
       "2024-10-01-Universal-relation-between-energy-gap-and-dielectric-constant.md\n",
-      "2024-11-01-Topological-Bound-on-the-Structure-Factor.md\n"
+      "2024-11-01-Topological-Bound-on-the-Structure-Factor.md\n",
+      "2024-12-01-Probing-quantum-geometry-through-optical-conductivity-and-magnetic-circular-dichroism.md\n",
+      "2025-02-01-Theory-of-Thermopolarization-Effect.md\n",
+      "2025-05-01-Quantum-weight-A-fundamental-property-of-quantum-many-body-systems.md\n",
+      "2025-07-01-Geometric-bound-on-the-structure-factor-and-a-harmonic-condition-on-band-geometry.md\n"
      ]
     }
    ],
