--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -90,24 +90,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING Missing Expected Field 'year' from entry chouGiantNonlinearTransport2025b: \" Giant Nonlinear Transport Resp ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry gaoAntiferromagneticDiodeEffect2024: \" An Antiferromagnetic Diode Eff ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry gaoQuantumMetricNonlinear2023: \" Quantum Metric Nonlinear {{Hal ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry ghoshProbingQuantumGeometry2024a: \" Probing Quantum Geometry throu ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry ishidaPureNematicQuantum2022: \" Pure Nematic Quantum Critical  ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry minColossalRoomtemperatureNonreciprocal2024: \" Colossal Room-Temperature Non- ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry Mukasa2021: \" High-Pressure Phase Diagrams o ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry Onishi2021: \" Theory of {{Seebeck}} Ratchet  ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiEffectsRelaxationPhotovoltaic2022: \" Effects of Relaxation on the P ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiEmergentCurvedSpace2026: \" Emergent Curved Space and Grav ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiFundamentalBoundTopological2024: \" Fundamental {{Bound}} on {{Top ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiGeometricBoundStructure2025: \" Geometric Bound on the Structu ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiHighefficiencyEnergyHarvesting2024: \" High-Efficiency Energy Harvest ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiQuantumWeightFundamental2025: \" Quantum Weight: {{A}} Fundamen ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiTheoryShiftHeat2022: \" Theory of Shift Heat Current a ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiTheoryThermopolarizationEffect2025: \" Theory of {{Thermopolarization ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiTopologicalBoundStructure2024: \" Topological {{Bound}} on the { ... \"\n",
-      "WARNING Missing Expected Field 'year' from entry onishiUniversalRelationEnergy2024a: \" Universal Relation between Ene ... \"\n"
+      "SUCESSFULLY PARSED chouGiantNonlinearTransport2025b: \" Giant Nonlinear Transport Response in a Magnetic Semiconduct ... \"\n",
+      "SUCESSFULLY PARSED gaoAntiferromagneticDiodeEffect2024: \" An Antiferromagnetic Diode Effect in Even-Layered {{MnBi2Te4 ... \"\n",
+      "SUCESSFULLY PARSED gaoQuantumMetricNonlinear2023: \" Quantum Metric Nonlinear {{Hall}} Effect in a Topological An ... \"\n",
+      "SUCESSFULLY PARSED ghoshProbingQuantumGeometry2024a: \" Probing Quantum Geometry through Optical Conductivity and Ma ... \"\n",
+      "SUCESSFULLY PARSED ishidaPureNematicQuantum2022: \" Pure Nematic Quantum Critical Point Accompanied by a Superco ... \"\n",
+      "SUCESSFULLY PARSED minColossalRoomtemperatureNonreciprocal2024: \" Colossal Room-Temperature Non-Reciprocal {{Hall}} Effect  \"\n",
+      "SUCESSFULLY PARSED Mukasa2021: \" High-Pressure Phase Diagrams of {{FeSe1}}-{{xTex}}: Correlat ... \"\n",
+      "SUCESSFULLY PARSED Onishi2021: \" Theory of {{Seebeck}} Ratchet in a Noncentrosymmetric Electr ... \"\n",
+      "SUCESSFULLY PARSED onishiEffectsRelaxationPhotovoltaic2022: \" Effects of Relaxation on the Photovoltaic Effect and Possibi ... \"\n",
+      "SUCESSFULLY PARSED onishiEmergentCurvedSpace2026: \" Emergent Curved Space and Gravitational Lensing in Quantum M ... \"\n",
+      "SUCESSFULLY PARSED onishiFundamentalBoundTopological2024: \" Fundamental {{Bound}} on {{Topological Gap}}  \"\n",
+      "SUCESSFULLY PARSED onishiGeometricBoundStructure2025: \" Geometric Bound on the Structure Factor and a Harmonic Condi ... \"\n",
+      "SUCESSFULLY PARSED onishiHighefficiencyEnergyHarvesting2024: \" High-Efficiency Energy Harvesting Based on a Nonlinear {{Hal ... \"\n",
+      "SUCESSFULLY PARSED onishiQuantumWeightFundamental2025: \" Quantum Weight: {{A}} Fundamental Property of Quantum Many-B ... \"\n",
+      "SUCESSFULLY PARSED onishiTheoryShiftHeat2022: \" Theory of Shift Heat Current and Its Application to Electron ... \"\n",
+      "SUCESSFULLY PARSED onishiTheoryThermopolarizationEffect2025: \" Theory of {{Thermopolarization Effect}}  \"\n",
+      "SUCESSFULLY PARSED onishiTopologicalBoundStructure2024: \" Topological {{Bound}} on the {{Structure Factor}}  \"\n",
+      "SUCESSFULLY PARSED onishiUniversalRelationEnergy2024a: \" Universal Relation between Energy Gap and Dielectric Constan ... \"\n"
      ]
     }
    ],
